--- a/style/style.css
+++ b/style/style.css
@@ -71,5 +71,292 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background-image: url("img/background.jpg");
+  background: url("../img/background.jpg");
+  background-size: cover;
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  position: relative;
+}
+
+#top {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+nav {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: 0px;
+  width: 100%;
+  height: 100px;
+  min-width: 950px;
+}
+
+.nav-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  height: 100%;
+  width: 25%;
+  margin-left: 10%;
+}
+.nav-title-icon {
+  width: 40px;
+  height: auto;
+  color: aliceblue;
+}
+.nav-title-span {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+}
+
+.nav-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 75%;
+  margin-right: 5%;
+}
+.nav-buttons-span {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  margin: 20px;
+}
+.nav-buttons-span-icon {
+  color: rgb(10, 8, 17);
+  background-color: white;
+  border: 1px white solid;
+  border-radius: 50px;
+  padding: 3px;
+}
+.nav-buttons-icon {
+  color: white;
+}
+
+.content {
+  display: block;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 100%;
+}
+.content-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 900px;
+  width: auto;
+  margin-left: 10%;
+  position: relative;
+  overflow: hidden;
+  padding-left: 15px;
+}
+.content-main-image {
+  position: absolute;
+  z-index: -1;
+  margin-left: 40%;
+  overflow: hidden;
+}
+.content-main-span {
+  padding: 10px 0;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  z-index: 1;
+}
+.content-workspace {
+  height: 800px;
+  width: 100%;
+  background: rgb(41, 38, 62);
+  background: radial-gradient(circle, rgb(41, 38, 62) 1%, rgb(34, 35, 35) 29%, rgb(34, 35, 35) 36%, rgb(34, 35, 35) 54%, rgb(34, 35, 35) 100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 200px;
+  opacity: 0.8;
+}
+.content-workspace-space {
+  border: 4px solid rgb(36, 17, 66);
+  border-radius: 30px;
+  -webkit-box-shadow: 0px 0px 5px 5px rgb(36, 7, 54);
+          box-shadow: 0px 0px 5px 5px rgb(36, 7, 54);
+  height: 90%;
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.content-workspace-space-span {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+}
+
+footer {
+  height: 200px;
+  width: 100%;
+  background-color: rgb(34, 35, 35);
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+}
+
+.footer-up-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  height: 50%;
+  width: 100%;
+}
+.footer-up-section-span {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.bottom-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  height: 50%;
+  width: 100%;
+}
+.bottom-section-a {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  cursor: pointer;
+}
+.bottom-section-span {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.purple-button {
+  color: white;
+  border: 2px #a238ff solid;
+  border-radius: 30px;
+  padding: 10px 30px;
+  background-color: #a238ff;
+  -webkit-box-shadow: 0px 0px 20px 1px #a238ff;
+          box-shadow: 0px 0px 20px 1px #a238ff;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  z-index: -4;
+}
+.purple-button:hover {
+  background-color: white;
+  cursor: pointer;
+  color: black;
+  border: 2px rgb(255, 255, 255) solid;
+}
+
+.hover-purple {
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+.hover-purple:hover {
+  color: rgb(185, 85, 185);
+}
+
+.big-font {
+  font-size: 60px;
+}
+
+.medium-font {
+  font-size: 30px;
+}
+
+.padding-margin-left {
+  margin-left: 20px;
+  padding-bottom: 20px;
+}
+
+html {
+  scroll-behavior: smooth;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html ::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.nav-scrolled {
+  background-color: rgb(34, 35, 35);
+  -webkit-box-shadow: 0px 0px 20px 3px black;
+          box-shadow: 0px 0px 20px 3px black;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.global {
+  z-index: 5;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
