--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,231 @@
 @import 'reset.scss';
 body{
-    background-image: url("img/background.jpg") ;
+    background:  url("../img/background.jpg") ;
+    background-size: cover ;
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    
+}
+// nav
+#top{
+    box-sizing: border-box;
+}
+nav{
+    position: fixed;
+    display: flex;
+    top: 0px;
+    width: 100%;
+    height: 100px;
+    min-width: 950px;
+}
+.nav-title{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100%;
+    width: 25%;
+    margin-left: 10%;
+    &-icon{
+        width: 40px;
+        height: auto;
+        color: aliceblue;   
+    }
+    &-span{
+        color: aliceblue;
+        font-family: Arial,Helvetica,sans-serif;
+        font-weight: 400;
+        font-size: 30px;
+    }
+
+}
+.nav-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 75%;
+    margin-right: 5%;
+    &-span{
+        color: aliceblue;
+        font-family: Arial,Helvetica,sans-serif;
+        font-weight: 400;
+        font-size: 18px;
+        margin: 20px;
+        &-icon{
+            color:rgb(10, 8, 17);
+            background-color:white;
+            border:1px white solid;
+            border-radius:50px;
+            padding: 3px;
+        }
+    }
+    &-icon{
+        color:white;
+    }
+}
+
+// content
+.content{
+    display: block;
+    height: fit-content;
+    width: 100%;
+    
+    &-main{
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+      justify-content: center;  
+      height: 900px;
+      width: auto;
+      margin-left: 10%;
+      position: relative;
+      overflow: hidden;
+      padding-left: 15px;
+      &-image{
+        position: absolute;
+         z-index: -1;
+         margin-left: 40%;
+         overflow: hidden;
+      }
+      &-span{
+         padding: 10px 0;
+         color:white;
+         font-family: Arial,Helvetica,sans-serif;
+         font-weight: 400;
+         z-index: 1;
+      }
+    }
+    &-workspace{
+        height: 800px;
+        width: 100% ;
+        background: rgb(41,38,62);
+        background: radial-gradient(circle, rgba(41,38,62,1) 1%, rgba(34,35,35,1) 29%, rgba(34,35,35,1) 36%, rgba(34,35,35,1) 54%, rgba(34,35,35,1) 100%);
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        padding-bottom: 200px ;
+        opacity: 0.8;
+        
+        &-space{
+            border:4px solid rgb(36, 17, 66);
+            border-radius: 30px;
+            box-shadow:0px 0px 5px 5px rgb(36, 7, 54);
+            height: 90%;
+            width: 90%;
+            display: flex;
+            align-items:center;
+            justify-content: center;
+            &-span{
+                color: aliceblue;
+                font-family: Arial,Helvetica,sans-serif;
+                font-weight: 400;
+                font-size: 30px;
+            }
+        }
+    }
+     
+
+    
+}
+// footer
+footer{
+    height: 200px;
+    width: 100%;
+    background-color:rgba(34,35,35,255);
+    position:absolute;
+    left:0px;
+    bottom:0px;
+}
+.footer-up-section{
+    display: flex;
+    align-items:center;
+    justify-content: space-evenly;
+    height: 50%;
+    width: 100%;
+    &-span{
+        color: aliceblue;
+        font-family: Arial,Helvetica,sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+        cursor: pointer;
+    }
+}
+.bottom-section{
+    display: flex;
+    align-items:center;
+    justify-content: space-evenly;
+    height: 50%;
+    width: 100%;
+    &-a{
+        color: aliceblue;
+        font-family: Arial,Helvetica,sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+        cursor: pointer;
+    }
+    &-span{
+        color: aliceblue;
+        font-family: Arial,Helvetica,sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+    }
+}
+
+
+// other
+.purple-button{
+    color:white;
+    border: 2px #a238ff solid;
+    border-radius: 30px ;
+    padding: 10px 30px;
+    background-color: #a238ff;
+    box-shadow: 0px 0px 20px 1px  #a238ff ;
+    transition-duration:.3s ;
+    font-family: Arial,Helvetica,sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    z-index: -4;
+    
+    &:hover{
+        background-color:white;
+        cursor: pointer;
+        color:black;
+        border: 2px rgb(255, 255, 255) solid;
+    }
+
+}
+.hover-purple{
+    transition-duration: .3s;
+    &:hover{
+        color:rgb(185, 85, 185);
+    }
+}
+.big-font{
+    font-size: 60px;
+}
+.medium-font{
+    font-size: 30px;
+}
+.padding-margin-left{
+    margin-left: 20px;
+    padding-bottom: 20px;
+}
+html {
+    scroll-behavior: smooth;
+    overflow: auto; 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+html  ::-webkit-scrollbar{
+    width: 0;
+    height: 0;
+}
+.nav-scrolled{
+    background-color:rgba(34,35,35,255);
+    box-shadow:0px 0px 20px 3px black;
+    transition-duration: .3s;
+}
+.global{
+    z-index: 5;
+    transition-duration: .3s;
 }
